--- a/src/ros_project_creator/resources/vscode/devcontainer.j2
+++ b/src/ros_project_creator/resources/vscode/devcontainer.j2
@@ -12,6 +12,7 @@
                 "davidanson.vscode-markdownlint",
                 "dotjoshjohnson.xml",
                 "foxundermoon.shell-format",
+                "morningfrog.urdf-visualizer"
                 "ms-azuretools.vscode-docker",
                 "ms-iot.vscode-ros",
                 "ms-python.black-formatter",
