--- a/src/ros_project_creator/resources/ros/install_ros.j2
+++ b/src/ros_project_creator/resources/ros/install_ros.j2
@@ -110,7 +110,39 @@ if [ "${num_distros}" -gt 1 ]; then
     exit 1
 fi
 
-if [ "${num_distros}" -eq 1 ] && [ "${ros_distro}" != "${ROS_DISTRO}" ]; then
+# If no ROS distro is installed, we proceed to add the ROS repository.
+if [ "${num_distros}" -eq 0 ]; then
+    gpg_dir="/etc/apt/keyrings"
+    gpg_file="${gpg_dir}/ros.gpg"
+
+    if [ ! -d "${gpg_dir}" ]; then
+        log "Creating directory '${gpg_dir}'"
+        mkdir --verbose --parent "${gpg_dir}"
+    fi
+
+    log "Adding ROS GPG key to file '${gpg_file}'"
+    curl -fsSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc | gpg --dearmor --output - | tee "${gpg_file}" >/dev/null
+
+    # Set correct permissions
+    chmod 644 "${gpg_file}"
+    chown root:root "${gpg_file}"
+
+    # Get relevant environment variables, included VERSION_CODENAME.
+    . /etc/os-release
+
+    if [ "${ROS_VERSION}" = "1" ]; then
+        url="http://packages.ros.org/ros/ubuntu"
+    else
+        url="http://packages.ros.org/ros2/ubuntu"
+    fi
+
+    deb_line="deb [arch=$(dpkg --print-architecture) signed-by=${gpg_file}] ${url} ${VERSION_CODENAME} main"
+    list_file="/etc/apt/sources.list.d/ros.list"
+
+    log "Adding custom ROS deb line to file '${list_file}'"
+    echo "${deb_line}" | tee "${list_file}" >/dev/null
+# Check if the installed ROS distro matches the requested one. If not, exit with an error.
+elif [ "${ROS_DISTRO}" != "${ros_distro}" ]; then
     log "Error: Found ROS '${ros_distro}' installed, but ROS '${ROS_DISTRO}' was requested to install" 2
     exit 1
 fi
@@ -127,65 +159,9 @@ apt-get update
 apt-get install --yes --no-install-recommends curl gpg
 apt-get dist-upgrade --yes
 
-# Add ROS repo.
-gpg_dir="/etc/apt/keyrings"
-gpg_file="${gpg_dir}/ros.gpg"
-
-if [ ! -d "${gpg_dir}" ]; then
-    log "Creating directory '${gpg_dir}'"
-    mkdir --verbose --parent "${gpg_dir}"
-elif [ -f "${gpg_file}" ]; then
-    log "File '${gpg_file}' already exists, removing it"
-    rm -f "${gpg_file}"
-fi
-
-log "Adding ROS GPG key to file '${gpg_file}'"
-curl -fsSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc |
-    gpg --dearmor --output - |
-    tee "${gpg_file}" >/dev/null
-
-# Set correct permissions
-sudo chmod 644 "${gpg_file}"
-sudo chown root:root "${gpg_file}"
-
-# Get relevant environment variables, included VERSION_CODENAME.
-. /etc/os-release
-
-if [ "${ROS_VERSION}" = "1" ]; then
-    url="http://packages.ros.org/ros/ubuntu"
-else
-    url="http://packages.ros.org/ros2/ubuntu"
-fi
-
-deb_pattern="^deb.*${url}[[:space:]]+${VERSION_CODENAME}[[:space:]]+main"
-deb_line="deb [arch=$(dpkg --print-architecture) signed-by=${gpg_file}] ${url} ${VERSION_CODENAME} main"
-list_file="/etc/apt/sources.list.d/ros.list"
-
-# Search for any file containing a matching ROS APT line and remove the line or the file, depending on the file where
-# the line is found.
-matched_files="$(grep -lE "${deb_pattern}" /etc/apt/sources.list /etc/apt/sources.list.d/*.list 2>/dev/null)"
-
-for matched_file in ${matched_files}; do
-    if [ "${matched_file}" = "/etc/apt/sources.list" ]; then
-        log "ROS deb line found in the file '${matched_file}', removing matching lines"
-        # Remove the line from the sources.list file.
-        sed -i -E "\#${deb_pattern}#d" "${matched_file}"
-    else
-        # Remove the file from sources.list.d.
-        log "Docker deb line found in the file '${matched_file}', removing file"
-        rm -f "${matched_file}"
-    fi
-done
-
-log "Adding custom ROS deb line to file '${list_file}'"
-echo "${deb_line}" | tee "${list_file}" >/dev/null
-
-apt-get update
-apt-get dist-upgrade --yes
-
 # Install the ROS packages.
 packages=(
- {{ ros_packages }}
+    {{ ros_packages }}
 )
 
 install_packages "${packages[@]}"
