--- a/src/ros_project_creator/resources/ros/install_ros.j2
+++ b/src/ros_project_creator/resources/ros/install_ros.j2
@@ -243,6 +243,17 @@ if [ -n "${ros_list_file}" ]; then
     rm -f "${gpg_file}"
 fi
 
+# Check if the ${env_line} exists in the file bashrc files.
+env_line='[ -f "${HOME}/.environment.sh" ] && . "${HOME}/.environment.sh"'
+
+if ! grep -Fxq "${env_line}" "${img_user_home}/.bashrc"; then
+    log "Adding line '${env_line}' to file '${img_user_home}/.bashrc'"
+    sudo -h -u "${img_user}" bash -c 'echo "# --------------------------------------" >> "${img_user_home}/.bashrc"'
+    sudo -h -u "${img_user}" bash -c 'echo "${env_line}" >> "${img_user_home}/.bashrc"'
+else
+    log "Line '${env_line}' already exists in file '${img_user_home}/.bashrc'"
+fi
+
 log "Removing installation residues from apt cache"
 apt-get autoclean
 apt-get autoremove --purge -y
