Refactor code to add functions create_items_to_install and intall_items

--- a/src/ros_project_creator/resources/README.j2
+++ b/src/ros_project_creator/resources/README.j2
@@ -1,4 +1,4 @@
-# Project <project_id>
+# Project {{ project_id }}
 
 [![GitLab CI](https://img.shields.io/badge/GitLab%20CI-Unknown-lightgrey?logo=gitlab)]()
 [![Coverage](https://img.shields.io/badge/Coverage-Unknown-lightgrey?logo=gitlab)]()
