--- a/src/ros_project_creator/resources/ros/environment_ros2.j2
+++ b/src/ros_project_creator/resources/ros/environment_ros2.j2
@@ -1,19 +1,18 @@
 #!/bin/bash
 
-export ROS_HOME="${ROS_HOME:-${HOME}/.ros}"
-export ROS_LOG_DIR="${ROS_LOG_DIR:-${HOME}/.ros/logs}"
-export ROS_TEST_RESULTS_DIR="${ROS_TEST_RESULTS_DIR:-${HOME}/.ros/tests}"
-export ROS_CONFIG_HOME="${ROS_CONFIG_HOME:-${HOME}/.config/ros.org}"
-export RTI_NC_LICENSE_ACCEPTED="${RTI_NC_LICENSE_ACCEPTED:-no}"
-export RMW_IMPLEMENTATION="${RMW_IMPLEMENTATION:-rmw_fastrtps_cpp}"
-export ROS_DOMAIN_ID="${ROS_DOMAIN_ID:-0}"
-export ROS_LOCALHOST_ONLY="${ROS_LOCALHOST_ONLY:-1}"
-export RCUTILS_COLORIZED_OUTPUT="${RCUTILS_COLORIZED_OUTPUT:-1}"
-export RCUTILS_LOGGING_USE_STDOUT="${RCUTILS_LOGGING_USE_STDOUT:-1}"
-export RCUTILS_LOGGING_BUFFERED_STREAM="${RCUTILS_LOGGING_BUFFERED_STREAM:-1}"
-export RCUTILS_CONSOLE_OUTPUT_FORMAT="${RCUTILS_CONSOLE_OUTPUT_FORMAT:-"[{severity}] {time} {name}: {message}"}"
+# export ROS_HOME="${ROS_HOME:-${HOME}/.ros}"
+# export ROS_LOG_DIR="${ROS_LOG_DIR:-${HOME}/.ros/logs}"
+# export ROS_TEST_RESULTS_DIR="${ROS_TEST_RESULTS_DIR:-${HOME}/.ros/tests}"
+# export ROS_CONFIG_HOME="${ROS_CONFIG_HOME:-${HOME}/.config/ros.org}"
+# export RTI_NC_LICENSE_ACCEPTED="${RTI_NC_LICENSE_ACCEPTED:-no}"
+# export RMW_IMPLEMENTATION="${RMW_IMPLEMENTATION:-rmw_fastrtps_cpp}"
+# export ROS_DOMAIN_ID="${ROS_DOMAIN_ID:-0}"
+# export ROS_LOCALHOST_ONLY="${ROS_LOCALHOST_ONLY:-1}"
+# export RCUTILS_COLORIZED_OUTPUT="${RCUTILS_COLORIZED_OUTPUT:-1}"
+# export RCUTILS_LOGGING_USE_STDOUT="${RCUTILS_LOGGING_USE_STDOUT:-1}"
+# export RCUTILS_LOGGING_BUFFERED_STREAM="${RCUTILS_LOGGING_BUFFERED_STREAM:-1}"
+# export RCUTILS_CONSOLE_OUTPUT_FORMAT="${RCUTILS_CONSOLE_OUTPUT_FORMAT:-"[{severity}] {time} {name}: {message}"}"
 
-# [{severity} {time}] [{name}]: {message} ({function_name}() at {file_name}:{line_number})
 
 # Check if workspace setup exists
 if [ -s "${HOME}/workspace/install/setup.bash" ]; then
