Back to bash in CMD, no need to -i since there is no way to run docker compose up and have the terminal back

--- a/src/ros_project_creator/resources/docker/Dockerfile.j2
+++ b/src/ros_project_creator/resources/docker/Dockerfile.j2
@@ -190,4 +190,4 @@ WORKDIR "/"
 {% if not use_base_img_entrypoint -%}
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 {% endif -%}
-CMD ["bash", "-i"]
+CMD ["bash"]
