--- a/src/ros_project_creator/resources/docker/Dockerfile.j2
+++ b/src/ros_project_creator/resources/docker/Dockerfile.j2
@@ -162,6 +162,8 @@ EOF
 ARG DEBIAN_FRONTEND
 ARG REQUESTED_USER
 ARG REQUESTED_USER_HOME
+ARG ROS_DISTRO
+ARG ROS_VERSION
 
 # Configure timezone and localization settings.
 # - TZ: Set the timezone to UTC to ensure consistent time handling across environments.
@@ -177,13 +179,7 @@ ENV IMG_USER="${REQUESTED_USER}" \
     ROS_LOG_DIR="${REQUESTED_USER_HOME}/.ros/logs" \
     ROS_TEST_RESULTS_DIR="${REQUESTED_USER_HOME}/.ros/tests" \
     ROS_CONFIG_HOME="${REQUESTED_USER_HOME}/.config/ros.org" \
-    RTI_NC_LICENSE_ACCEPTED="no" \
-    RMW_IMPLEMENTATION="rmw_fastrtps_cpp" \
-    RCUTILS_COLORIZED_OUTPUT="1" \
-    RCUTILS_LOGGING_USE_STDOUT="1" \
-    RCUTILS_LOGGING_BUFFERED_STREAM="1" \
-    RCUTILS_CONSOLE_OUTPUT_FORMAT="[{severity}] {time} {name}: {message}"
-# [{severity} {time}] [{name}]: {message} ({function_name}() at {file_name}:{line_number})
+{{ extra_ros_env_vars }}
 
 USER "${IMG_USER}"
 WORKDIR "/"
