--- a/src/ros_project_creator/resources/ros/bringup_CMakeLists_ros1.j2
+++ b/src/ros_project_creator/resources/ros/bringup_CMakeLists_ros1.j2
@@ -40,7 +40,7 @@ catkin_package(
 
 # Install required directories.
 install(
-  DIRECTORY config launch config scripts test
+  DIRECTORY config launch config scripts
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
