--- a/src/ros_project_creator/resources/ros/simulation_CMakeLists_ros2.j2
+++ b/src/ros_project_creator/resources/ros/simulation_CMakeLists_ros2.j2
@@ -22,7 +22,7 @@ find_package(ament_cmake_python REQUIRED)
 
 # Install launch files.
 install(
-  DIRECTORY config launch rviz scripts test
+  DIRECTORY config launch rviz scripts
   DESTINATION share/${PROJECT_NAME}/
 )
 
