If we are going to use the nvidia driver from the host machine, there is no need to map de /dev/dri into the docker container, since the element 'runtime: nvidia' will take care of it

--- a/src/ros_project_creator/resources/docker/docker-compose.j2
+++ b/src/ros_project_creator/resources/docker/docker-compose.j2
@@ -39,7 +39,9 @@ services:
       {% endif %}
     devices:
       - /dev/bus/usb:/dev/bus/usb
+      {% if not use_host_nvidia_driver %}
       - /dev/dri:/dev/dri
+      {% endif %}
     #device_cgroup_rules:
       #- "c 189:* rmw"
     environment:
